--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -12,7 +12,7 @@
 </head>
 <body class = "bg-black">
     <div>
-        <h1 id="title" class="heading">DOM Learning on Chai aur code</h1>
+        <h1 id="title" class="heading">DOM Learning on Chai aur code <span style="display: none;">Test Text</span></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, quibusdam?</p> </div>
 </body>
 </html>
