--- a/06_dom/four.html
+++ b/06_dom/four.html
@@ -8,6 +8,7 @@
 <body style="background-color: #212121; color:#fff">
     <ul class="language">
         <li>JavaScript</li>
+        <li>Java</li>
     </ul>
 </body>
 <style>
